[package]
name = "mechanical-engineering"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Mechanical engineering calculation library and terminal based GUI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
